--- a/Lab Notebook/custom.css
+++ b/Lab Notebook/custom.css
@@ -4,6 +4,8 @@ h1 {
   text-decoration: underline;
 }
 
-body {
-  background-color: red !important;
-}
+.output_png {
+        display: table-cell;
+        text-align: center;
+        vertical-align: middle;
+    }
